# climlab-stardust-extension

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  environment.yml  pyproject.toml
climlab_stardust_extension/: __init__.py
climlab_stardust_extension/convection/: __init__.py  large_scale_convection.py  simplified_betts_miller.py
climlab_stardust_extension/dynamics/: __init__.py  atmospheric_data.py  large_scale_condensation.py  meridional_moist_diffusion.py  particle_source.py  source_parameterizations.py  two_dimensional_advection_diffusion.py
climlab_stardust_extension/microphysics/: __init__.py  coagulation.py  sedimentation.py
climlab_stardust_extension/radiation/: __init__.py  insolation.py  optical_depth_tables_aerosols.py
climlab_stardust_extension/radiation/rrtm/: __init__.py  rrtmg.py  rrtmg_lw.py  rrtmg_sw.py
climlab_stardust_extension/surface/: __init__.py  oceanic_heat_uptake.py  turbulent.py
climlab_stardust_extension/utils/: constants.py  file_handling.py  thermo.py
tests/: conftest.py  test_aerosol_optical_depth.py  test_atmospheric_data.py  test_convection.py  test_dynamics.py  test_microphysics.py  test_particle_source.py  test_radiation.py  test_surface.py  test_two_d_adv_diff_numerics.py  test_two_d_advdiff_solver.py  test_utils.py
